--- a/style/dark.css
+++ b/style/dark.css
@@ -11,14 +11,6 @@
   --jp-inverse-layout-color3: var(--jp-brand-color1);
   --jp-warn-color0: var(--gt-tertiary-horizon);
   --jp-icon-contrast-color0: var(--jp-brand-color1);
-  --jp-content-line-height: 2;
-  --jp-content-font-family: var(--gt-font-primary);
-  --jp-ui-font-family: var(--gt-font-primary);
-  --jp-code-font-family: var(--gt-font-mono);
-  --jp-ui-font-size1: 15px;
-  --jp-ui-font-size0: 14px;
-  --jp-content-font-size1: 15px;
-  --jp-content-font-size5: 32px;
 
   /* ui */
   --jp-input-box-shadow: inset 0 0 2px var(--jp-brand-color0);
@@ -44,11 +36,11 @@
   /* content */
   --gtc-header-color: var(--gt-gold);
   --gtc-widgets-label-color: var(--jp-brand-color1);
-  --gtc-running-color: var(--gt-blue-link-hover);
+  --gtc-running-color: var(--jp-brand-color1);
 }
 
 body[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] {
-  background-color: var(--gt-black);
+  background-color: var(--jp-layout-color0);
 }
 
 /* tabs */
@@ -76,7 +68,7 @@ body[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] {
 [data-jp-theme-name*='GT COAR'][data-jp-theme-light='false']
   button.jp-mod-styled.jp-mod-accept:active {
   background-color: var(--jp-brand-color1);
-  color: var(--gt-black);
+  color: var(--jp-layout-color0);
 }
 
 /* menu */
@@ -87,14 +79,14 @@ body[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] {
 [data-jp-theme-name*='GT COAR'][data-jp-theme-light='false']
   .lm-MenuBar-item.lm-mod-active {
   background-color: var(--jp-brand-color1);
-  color: var(--gt-black);
+  color: var(--jp-layout-color0);
 }
 
 [data-jp-theme-name*='GT COAR'][data-jp-theme-light='false']
   .lm-MenuBar.lm-mod-active
   .lm-MenuBar-item.lm-mod-active {
   background-color: var(--jp-brand-color1);
-  color: var(--gt-black);
+  color: var(--jp-layout-color0);
   border-color: transparent;
 }
 
@@ -110,4 +102,11 @@ body[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] {
   .jp-InputArea-editor,
 [data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] .jp-InputArea-editor {
   border: 0;
+}
+
+/* completer */
+[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false']
+  .jp-Completer-item.jp-mod-active {
+  color: var(--jp-layout-color0);
+  font-weight: 700;
 }
